--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,10 +4,40 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Font Awesome (version gratuite) -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="stylesheet" href="/style/main-style.css" />
         <title>Météo</title>
         <script defer="defer" src="/scripts/meteofetch.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <main class="card">
+            <header><h1>Météo Locale</h1></header>
+            <section class="weather-section">
+                <p class="weather-icon-full"><i class="fas fa-question"></i></p>
+                <p class="temperature">26°C</p>
+                <p class="wheather-feel">Ciel dégagé</p>
+                <p class="localisation">
+                    <svg class="icone lieu" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="512" height="512"><path d="M12,0A10.011,10.011,0,0,0,2,10c0,5.282,8.4,12.533,9.354,13.343l.646.546.646-.546C13.6,22.533,22,15.282,22,10A10.011,10.011,0,0,0,12,0Zm0,15a5,5,0,1,1,5-5A5.006,5.006,0,0,1,12,15Z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+                    <span class="city">Saint Maxire</span>, <span class="postal-code">79410</span></p>
+            </section>
+            <footer class="weather-footer">
+                <section class="footer-column temperature-minimal">
+                    <i class="fa-solid fa-temperature-quarter"></i>
+                    <h3>T° min.: </h3>
+                    <p class="temp">20°C</p>
+                </section>
+                <section class="footer-column altitude">
+                    <i class="fa-solid fa-mountain-sun"></i>
+                    <h3>Altitude: </h3>
+                    <p>44M</p>
+                </section>
+                <section class="footer-column lat-lon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <h3>Coordonées: </h3>
+                    <p>46.3994,-0.48</p>
+                </section>
+            </footer>
+        </main>
     </body>
 </html>
